# Project_Fiona

./: .gitignore  404.html  AGENTS.md  ARCHITECTURE_ASSESSMENT.md  ARCHITECTURE_REVIEW.md  DEVELOPERNOTE.md  LICENSE  PLAN.md  README.md  SessionLocalPages.md  bsh  dependencies.md  devlog.md  fiona.spec  handoff.md  index.html  package-lock.json  package.json  pyproject.toml
Agent/: __init__.py  cancellation.py  chat_handler.py  chat_store.py  command_registry.py  lmstudio.py  ollama.py  orchestration.py  orchestrator.py  permission.py  personality.py  query_detector.py  tool_runtime.py
BrowserAutomation/: __init__.py  _config.py  _errors.py  _manager.py  _playwright_provider.py  _selenium_provider.py  _session_manager.py
CamComs/: __init__.py  audit.py  identity.py  pairing.py  paths.py  receiver.py  service.py  systemd.py  transport.py  trust.py
CmdTrace/: __init__.py  trace.py
DataClient/: __init__.py  gui.py  miner.py  table.py
EyeControl/: Eye_Controlled_Mouse_Tracker.py  __init__.py  tracker.py
FionaAgent/: __init__.py  orchestrator.py  tools.py  watchers.py
FionaCore/: __init__.py  acl.py  actions.py  approval.py  gui_theme.py  macro_engine.py  macros.py  notifications.py  permissions.py  shell_safety.py  speech.py  verification.py  voice.py  voice_engine.py
Mantatree/: __init__.py  gui.py  pipeline.py
PhiConnect/: __init__.py  bridge.py  chat.py  foreman_handler.py  gui.py
QuikTieper/: __init__.py  app_command_presets.py  bindings.py  cli.py  config.py  desktop_apps.py  gui.py  key_assignment.py  launcher.py  remote.py  system_tray.py
RecallVault/: __init__.py  semantic.py  vault.py
SciPhi/: __init__.py  cli.py  errors.py
SciRetrieval/: __init__.py  cache_manager.py  cli.py  entity_resolver.py  errors.py  interfaces.py  maintext_bridge.py  models.py  normalizer.py  provider_registry.py  retrieval_manager.py  router.py
SeeOnDesk/: __init__.py  action_discovery.py  desktop.py  process_tracker.py  vision.py  workspace_watcher.py
TerminalAssist/: __init__.py  dashboard.py  gui.py  tui.py
Voice/: __init__.py  feedback_engine.py  push_to_talk.py  wake_word.py
Vsee/: gui.py
actions/: __init__.py  actions.json  example_action.py
architecture/: index.html
cad/: __init__.py
current-state/: index.html
fiona/: __init__.py  cli.py  di.py  interfaces.py  logging.py  metrics.py  plugin_system.py  tracing.py
fionaDocsPage/: README.md  mkdocs.yml
fionaLocalPages/: ARCHITECTURE.md  index.html
getting-started/: index.html
installation/: index.html
prototypes/: index.html
roadmap/: index.html
rules/: README.md  architecture.md  coding.md  controller.md  execution.md  recovery.md  repository.md  tool_selection.md
scripts/: fiona-install  fiona-pages-start  fiona-pages-stop  verify-backup
search/: search_index.json
stylesheets/: fiona-docs.css
tests/: test_acl.py  test_action_discovery.py  test_codec.py  (+58 more)
(+457 files in other folders)
