[project]
name = "fiona"
version = "0.1.0"
description = "Mouse-free app launcher built around simultaneous key chords."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=46.0.7",
  "numpy>=2.0.0",
  "pandas>=2.0.0",
  "pynput>=1.7.7",
  "requests>=2.31.0",
]

[project.optional-dependencies]
eyecontrol = [
  "mediapipe>=0.10.0",
  "opencv-python>=4.9.0",
  "pyautogui>=0.9.54",
]
browser = [
  "selenium>=4.20.0",
  "webdriver-manager>=4.0.0",
]
sciphi = [
  "sympy>=1.12",
  "scipy>=1.11.0",
]
sciretrieval = [
  "aiohttp>=3.9.0",
]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "aioresponses>=0.7.6",
]

[project.scripts]
fiona = "fiona.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["fiona", "BrowserAutomation", "QuikTieper", "CamComs", "Vsee", "Agent", "PhiConnect", "SeeOnDesk", "DataClient", "EyeControl", "TerminalAssist", "FionaCore", "CmdTrace", "RecallVault", "Voice", "cad",
            "cad.core", "cad.geometry", "cad.constraints", "cad.sketch", "cad.part", "cad.assembly",
            "cad.commands", "cad.scripting", "cad.io", "cad.plugins", "cad.rendering", "cad.gui", "cad.cli", "cad.tests",
            "SciPhi", "SciPhi.kernel", "SciPhi.interfaces", "SciPhi.data", "SciPhi.models", "SciPhi.solvers",
            "SciPhi.models.physics", "SciPhi.models.chemistry", "SciPhi.models.biology", "SciPhi.models.earth", "SciPhi.models.engineering", "SciPhi.models.math",
            "SciPhi.solvers.deterministic", "SciPhi.solvers.stochastic", "SciPhi.solvers.symbolic", "SciPhi.solvers.optimization",
            "SciPhi.visualization", "SciPhi.reports", "SciPhi.tests",
            "SciRetrieval", "SciRetrieval.providers", "SciRetrieval.scilab",
            "SciRetrieval.cache", "SciRetrieval.data"]

[tool.setuptools.package-data]
CamComs = ["esp32payload/*"]
